--- a/quickstart-parent/quickstart-ums/src/main/webapp/WEB-INF/views/signup/signup.html
+++ b/quickstart-parent/quickstart-ums/src/main/webapp/WEB-INF/views/signup/signup.html
@@ -16,6 +16,13 @@
     </th:block>
     <fieldset>
         <legend>Please Sign Up</legend>
+        <div class="form-group" th:classappend="${#fields.hasErrors('name')}? 'has-error'">
+            <label for="name" class="col-lg-2 control-label">Name</label>
+            <div class="col-lg-10">
+                <input type="text" class="form-control" id="name" placeholder="Email/Phone" th:field="*{name}" />
+                <span class="help-block" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Incorrect Name</span>
+            </div>
+        </div>
         <div class="form-group" th:classappend="${#fields.hasErrors('email')}? 'has-error'">
             <label for="email" class="col-lg-2 control-label">Email Address</label>
             <div class="col-lg-10">
