--- a/quickstart-parent/quickstart-ums/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/quickstart-parent/quickstart-ums/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -15,10 +15,10 @@
             <a class="navbar-brand" href="#">Demo project</a>
         </div>
         <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#" th:href="@{/}">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+            <ul id="nav" class="nav navbar-nav">
+                <li th:classappend="${#httpServletRequest.getRequestURI() == '/' ? 'active':''}"><a href="#" data-toggle="tab" th:href="@{/}">Home</a></li>
+                <li th:classappend="${#httpServletRequest.getRequestURI() == '/about' ? 'active':''}"><a href="#about" >About</a></li>
+                <li th:classappend="${#httpServletRequest.getRequestURI() == '/contact' ? 'active':''}"><a href="#contact" >Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li th:if="${#authorization.expression('!isAuthenticated()')}">
