--- a/quickstart-parent/quickstart-ums/src/main/webapp/WEB-INF/views/signin/signin.html
+++ b/quickstart-parent/quickstart-ums/src/main/webapp/WEB-INF/views/signin/signin.html
@@ -29,7 +29,7 @@
             <div class="col-lg-offset-2 col-lg-10">
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" name="_spring_security_remember_me" /> Remember me
+                        <input type="checkbox" name="remember_me" /> Remember me
                     </label>
                 </div>
             </div>
